[gd_scene load_steps=33 format=3 uid="uid://olgdco8lthmf"]

[ext_resource type="Script" path="res://entities/player/dino.gd" id="1_7xbfo"]
[ext_resource type="Texture2D" uid="uid://d3ve3kqa4tmuk" path="res://entities/player/DinoSprites - vita.png" id="1_33ppp"]
[ext_resource type="Texture2D" uid="uid://dohdhf6w7ohpn" path="res://spells/Free Smoke Fx  Pixel 05.png" id="1_mcgx0"]
[ext_resource type="Script" path="res://state_machine.gd" id="4_7rn2m"]
[ext_resource type="Script" path="res://scenes/idle_state.gd" id="5_enxiw"]
[ext_resource type="Script" path="res://scenes/walking_state.gd" id="6_krq07"]
[ext_resource type="Script" path="res://scenes/conjuring_state.gd" id="7_rbcmj"]
[ext_resource type="Script" path="res://scenes/casting_state.gd" id="8_gf7vc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sgoms"]
atlas = ExtResource("1_mcgx0")
region = Rect2(512, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs53a"]
atlas = ExtResource("1_mcgx0")
region = Rect2(448, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_par6y"]
atlas = ExtResource("1_mcgx0")
region = Rect2(384, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_48f4l"]
atlas = ExtResource("1_mcgx0")
region = Rect2(320, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_51i5p"]
atlas = ExtResource("1_mcgx0")
region = Rect2(256, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnwxn"]
atlas = ExtResource("1_mcgx0")
region = Rect2(192, 640, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vqtv"]
atlas = ExtResource("1_mcgx0")
region = Rect2(128, 640, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_i4y4j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgoms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs53a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_par6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48f4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51i5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnwxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vqtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnwxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51i5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48f4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_par6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs53a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgoms")
}],
"loop": true,
"name": &"conjuring_fx",
"speed": 11.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ht8hp"]
atlas = ExtResource("1_33ppp")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_epunf"]
atlas = ExtResource("1_33ppp")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b17tb"]
atlas = ExtResource("1_33ppp")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_55ow5"]
atlas = ExtResource("1_33ppp")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_asv6t"]
atlas = ExtResource("1_33ppp")
region = Rect2(240, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0ca4"]
atlas = ExtResource("1_33ppp")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uyvs"]
atlas = ExtResource("1_33ppp")
region = Rect2(288, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w81h3"]
atlas = ExtResource("1_33ppp")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_krwqs"]
atlas = ExtResource("1_33ppp")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_eon2r"]
atlas = ExtResource("1_33ppp")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdfr8"]
atlas = ExtResource("1_33ppp")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_avwe0"]
atlas = ExtResource("1_33ppp")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr8h3"]
atlas = ExtResource("1_33ppp")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6ufk"]
atlas = ExtResource("1_33ppp")
region = Rect2(216, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_fxkh3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht8hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epunf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b17tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55ow5")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asv6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0ca4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uyvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w81h3")
}],
"loop": true,
"name": &"step",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_krwqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eon2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdfr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avwe0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr8h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6ufk")
}],
"loop": true,
"name": &"walk",
"speed": 13.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jfbed"]
radius = 26.36
height = 112.72

[node name="Dino" type="CharacterBody2D"]
script = ExtResource("1_7xbfo")

[node name="ConjuringFX" type="AnimatedSprite2D" parent="."]
position = Vector2(57, -13)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_i4y4j")
animation = &"conjuring_fx"
autoplay = "conjuring_fx"
frame_progress = 0.507187

[node name="DinoSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(56, -63)
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_fxkh3")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(51, -56)
shape = SubResource("CapsuleShape2D_jfbed")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_7rn2m")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("dino")]
script = ExtResource("5_enxiw")
dino = NodePath("../..")

[node name="Walking_Left" type="Node" parent="StateMachine" node_paths=PackedStringArray("dino")]
script = ExtResource("6_krq07")
dino = NodePath("../..")
direction = -1

[node name="Walking_Right" type="Node" parent="StateMachine" node_paths=PackedStringArray("dino")]
script = ExtResource("6_krq07")
dino = NodePath("../..")

[node name="Conjuring" type="Node" parent="StateMachine" node_paths=PackedStringArray("dino")]
script = ExtResource("7_rbcmj")
dino = NodePath("../..")

[node name="Casting" type="Node" parent="StateMachine" node_paths=PackedStringArray("dino")]
script = ExtResource("8_gf7vc")
dino = NodePath("../..")
